--- a/snippets/product-media.liquid
+++ b/snippets/product-media.liquid
@@ -45,7 +45,8 @@
       transitionToProduct: settings.transition_to_main_product,
       data_max_resolution: high_res_url,
       fetchpriority: fetch_priority,
-      style: focal_point_style
+      style: focal_point_style,
+      data-parallax: true
   }}
 
   {% unless preview_image_only %}
