--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -123,5 +123,13 @@
     {% if settings.quick_add or settings.mobile_quick_add %}
       {% render 'quick-add-modal' %}
     {% endif %}
+    <!-- Awwwards Stack -->
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
+    <script src="https://unpkg.com/split-type"></script>
+    <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@1.0.29/bundled/lenis.min.js"></script>
+    
+    <script src="{{ 'animations.js' | asset_url }}" defer="defer"></script>
+    <script src="{{ 'cursor.js' | asset_url }}" defer="defer"></script>
   </body>
 </html>
