--- a/snippets/resource-image.liquid
+++ b/snippets/resource-image.liquid
@@ -152,7 +152,7 @@
     {{
       image_resource
       | image_url: width: 3840
-      | image_tag: widths: widths, class: 'image-block__image', sizes: sizes, loading: loading
+      | image_tag: widths: widths, class: 'image-block__image', sizes: sizes, loading: loading, data-parallax: true
     }}
   </div>
 {% else %}
