--- a/snippets/text.liquid
+++ b/snippets/text.liquid
@@ -51,6 +51,7 @@
 {% capture attributes %}
   class="{{ class }} spacing-style text-block text-block--{{ block.id }} {{ block_settings.type_preset }}
     {{ text_block_classes }}
+    {% if type == 'display' or type == 'heading' %} reveal-text{% endif %}
   "
 
   style="
