Add cinematic collection section and improve hero styling

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -5,7 +5,7 @@
 
 {% schema %}
 {
-  "name": "t:sections.header.name",
+  "name": "t:names.header",
   "class": "header-section",
   "settings": [
     {
