--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -29,6 +29,7 @@
     {%- render 'fonts' -%}
     {%- render 'scripts' -%}
     {%- render 'theme-styles-variables' -%}
+    {%- render 'custom-fonts.css' -%}
     {%- render 'color-schemes' -%}
 
     {% if request.design_mode %}
@@ -128,7 +129,7 @@
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
     <script src="https://unpkg.com/split-type"></script>
     <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@1.0.29/bundled/lenis.min.js"></script>
-    
+
     <script src="{{ 'animations.js' | asset_url }}" defer="defer"></script>
     <script src="{{ 'cursor.js' | asset_url }}" defer="defer"></script>
   </body>
