--- a/blocks/_accordion-row.liquid
+++ b/blocks/_accordion-row.liquid
@@ -1,4 +1,3 @@
-
 {% assign block_settings = block.settings %}
 
 <accordion-custom
@@ -28,6 +27,9 @@
       </span>
       <span class="svg-wrapper icon-plus">
         {{- 'icon-plus.svg' | inline_asset_content -}}
+      </span>
+      <span class="svg-wrapper icon-minus">
+        {{- 'icon-minus.svg' | inline_asset_content -}}
       </span>
     </summary>
 
