--- a/blocks/_product-details.liquid
+++ b/blocks/_product-details.liquid
@@ -1,5 +1,3 @@
-
-
 {%- assign block_settings = block.settings -%}
 <div
   id="ProductInformation-{{ section.id }}"
@@ -16,7 +14,9 @@
 >
   {% capture children %}
     <div class="view-product-title">
+      {% render 'breadcrumbs' %}
       <a
+
         href="{{ closest.product.selected_or_first_available_variant.url }}"
         class="link"
       >
@@ -51,12 +51,20 @@
   @media screen and (min-width: 750px) {
     .product-details > .group-block {
       height: min-content;
+      max-width: 42rem; /* Constrain width for readability */
+      width: 100%;
     }
 
     .full-height--desktop {
       height: 100%;
       max-height: calc(100vh - var(--header-group-height, 0));
       min-height: fit-content;
+      overflow-y: auto; /* Enable internal scrolling */
+      scrollbar-width: none; /* Hide scrollbar Firefox */
+    }
+
+    .full-height--desktop::-webkit-scrollbar {
+      display: none; /* Hide scrollbar Chrome/Safari */
     }
 
     .full-height--desktop .group-block {
