--- a/blocks/variant-picker.liquid
+++ b/blocks/variant-picker.liquid
@@ -1,5 +1,3 @@
-
-
 {% liquid
   assign product_resource = closest.product
   if request.visual_preview_mode and product_resource == blank
@@ -8,7 +6,7 @@
 -%}
 
 {% unless product_resource == blank %}
-  {% render 'variant-main-picker', product_resource: product_resource %}
+  {% render 'variant-main-picker', product_resource: product_resource, section: section %}
 {% endunless %}
 
 {% schema %}
