--- a/assets/base.css
+++ b/assets/base.css
@@ -3411,6 +3411,20 @@ label:has(input[type='checkbox']:disabled) {
   }
 }
 
+/* Custom Quantity Selector Style to match ATC */
+.product-details .quantity-selector {
+  border: none !important;
+  background-color: rgba(0, 0, 0, 0.05) !important;
+  border-radius: 999px !important;
+  min-height: 56px !important;
+  color: rgb(var(--color-foreground)) !important;
+}
+
+.product-details .quantity-selector .quantity-minus,
+.product-details .quantity-selector .quantity-plus {
+  border-radius: 0 !important;
+}
+
 .pills__pill>.svg-wrapper {
   --close-icon-opacity: 0.4;
   --icon-stroke-width: 1px;
@@ -4670,6 +4684,7 @@ text-component {
   overflow: hidden;
   text-overflow: ellipsis;
   -webkit-line-clamp: 3;
+  line-clamp: 3;
 }
 
 /* Product card title truncation - applied on mobile regardless of view */
@@ -4680,6 +4695,7 @@ text-component {
     overflow: hidden;
     text-overflow: ellipsis;
     -webkit-line-clamp: 3;
+    line-clamp: 3;
   }
 }
 
