--- a/snippets/variant-main-picker.liquid
+++ b/snippets/variant-main-picker.liquid
@@ -18,7 +18,7 @@
     endif
   %}
   <variant-picker
-    class="variant-picker spacing-style variant-picker--{{ block_settings.alignment }}"
+    class="variant-picker spacing-style variant-picker--{{ block_settings.alignment }} reveal-up"
     style="--color-strikethrough-mix: {{ strikethrough_color_mix }}; {% render 'spacing-style', settings: block_settings %}"
     data-section-id="{{ section.id }}"
     data-product-id="{{ product_resource.id }}"
