Add collection hero and animated product grid

--- a/blocks/_product-media-gallery.liquid
+++ b/blocks/_product-media-gallery.liquid
@@ -1,9 +1,9 @@
-
 {% render 'product-media-gallery-content',
   media_presentation: block.settings.media_presentation,
   block_settings: block.settings,
   block_id: block.id,
-  block_shopify_attributes: block.shopify_attributes
+  block_shopify_attributes: block.shopify_attributes,
+  section: section
 %}
 
 {% schema %}
