--- a/blocks/buy-buttons.liquid
+++ b/blocks/buy-buttons.liquid
@@ -703,11 +703,14 @@
     opacity: 1;
     block-size: auto;
 
+    /* @starting-style is not yet supported by Shopify's CSS parser */
+    /*
     @starting-style {
       block-size: 0;
       opacity: 0;
       overflow-y: clip;
     }
+    */
   }
 
   .volume-pricing--expanded .volume-pricing__show-more {
