--- a/blocks/_featured-product-information-carousel.liquid
+++ b/blocks/_featured-product-information-carousel.liquid
@@ -1,10 +1,9 @@
-
-
 {% render 'product-media-gallery-content',
   media_presentation: 'carousel',
   block_settings: block.settings,
   block_id: block.id,
-  block_shopify_attributes: block.shopify_attributes
+  block_shopify_attributes: block.shopify_attributes,
+  section: section
 %}
 
 {% schema %}
